--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <title>TodoMVC</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="build/bundle.css" />
+    <link rel="stylesheet" href="bundle.css" />
   </head>
   <body>
     <div id="app" class="minvh col">
@@ -13,6 +13,6 @@
         <p class="lh4">Loading&hellip;</p>
       </div>
     </div>
-    <script src="build/bundle.js"></script>
+    <script src="bundle.js"></script>
   </body>
 </html>
